Restored to '3fc17a65ffd07048cf24221c7346c59c19ddf39c'
Replit-Restored-To: 3fc17a65ffd07048cf24221c7346c59c19ddf39c

--- a/index.html
+++ b/index.html
@@ -1,62 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
-  <title>Tidal Serverside - Unleash Your Roblox Experience</title>
-  <meta name="description" content="Tidal Serverside is the ultimate server-side executor for Roblox, built for power and precision. Join our community-driven platform with modern UI and secure execution environment.">
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <meta property="og:title" content="Tidal Serverside - Unleash Your Roblox Experience">
-  <meta property="og:description" content="The ultimate server-side executor for Roblox, built for power and precision. Join our community-driven platform.">
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://tidalserverside.com">
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      background-color: #0d0d0d;
-      color: #fff;
-      font-family: 'Inter', sans-serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      text-align: center;
-    }
-    h1 {
-      font-size: 3rem;
-      margin-bottom: 1rem;
-    }
-    p {
-      max-width: 600px;
-      line-height: 1.5;
-      margin-bottom: 2rem;
-      color: #ccc;
-    }
-    .icon {
-      font-size: 2rem;
-      margin-top: 20px;
-      color: #0ff;
-    }
-    a.button {
-      padding: 0.8rem 1.5rem;
-      border-radius: 8px;
-      background-color: #0ff;
-      color: #000;
-      text-decoration: none;
-      font-weight: 600;
-      transition: background 0.3s;
-    }
-    a.button:hover {
-      background-color: #00cccc;
-    }
-  </style>
-</head>
-<body>
-  <h1><i class="fas fa-terminal icon"></i> TIDAL ServerSide</h1>
-  <p>The ultimate server-side executor for Roblox, built for power, security, and a modern user experience. Join our community-driven platform and transform your game control.</p>
-  <a class="button" href="#">Join Now</a>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
+    <title>Tidal Serverside - Unleash Your Roblox Experience</title>
+    <meta name="description" content="Tidal Serverside is the ultimate server-side executor for Roblox, built for power and precision. Join our community-driven platform with modern UI and secure execution environment.">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    
+    <!-- Open Graph tags -->
+    <meta property="og:title" content="Tidal Serverside - Unleash Your Roblox Experience">
+    <meta property="og:description" content="The ultimate server-side executor for Roblox, built for power and precision. Join our community-driven platform.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://tidal-serverside.replit.app">
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/client/src/main.tsx"></script>
+    <!-- This is a replit script which adds a banner on the top of the page when opened in development mode outside the replit environment -->
+    <script type="text/javascript" src="https://replit.com/public/js/replit-dev-banner.js"></script>
+  </body>
 </html>
